// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBColumnConfiguration component should render column "absorption": absorption 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <div
      class="text-block"
    >
      value1
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-reviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
    </div>
    <button
      aria-controls="1"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="1"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "accession": accession 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniprotkb/P21802"
    >
      P21802
    </a>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "annotation_score": annotation_score 1`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_activity_regulation": cc_activity_regulation 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_allergen": cc_allergen 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_alternative_products": cc_alternative_products 1`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <hr />
  <h3
    id="isoID1"
  >
    isoID1
  </h3>
  <ul
    class="info-list info-list--columns"
  >
    <li>
      <div
        class="decorated-list-item decorated-list-item--compact"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Name
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          name
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item decorated-list-item--compact"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Synonyms
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          syn value
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item decorated-list-item--compact"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Note
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          value1
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_biotechnology": cc_biotechnology 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_catalytic_activity": cc_catalytic_activity 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
     some reaction
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     direction 
    <button
      aria-controls="1"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        Imported
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="1"
    />
    <div>
      <span
        class="ec-number"
      >
        EC: 1.2.4.5
      </span>
       ( 
      <a
        href="/uniprotkb?query=(ec:1.2.4.5)"
      >
        UniProtKB 
        <test-file-stub
          width="1.333ch"
        />
      </a>
       | 
      <a
        class="external-link"
        href="https://enzyme.expasy.org/EC/1.2.4.5"
        rel="noopener"
        target="_blank"
      >
        ENZYME
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      | 
      <a
        class="external-link"
        href="https://www.rhea-db.org/rhea?query=ec:1.2.4.5"
        rel="noopener"
        target="_blank"
      >
        Rhea
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      )
    </div>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_cofactor": cc_cofactor 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
    </span>
    <div
      class="text-block"
    >
      value2
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_developmental_stage": cc_developmental_stage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_disease": cc_disease 1`] = `
<DocumentFragment>
  <h3>
    DiseaseEntry Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </span>
  <ul
    class="info-list"
  >
    <li>
      <div
        class="decorated-list-item"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Note
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          <ul
            class="expandable-list no-bullet"
          >
            <li>
              value2
              <button
                aria-controls="1"
                aria-expanded="false"
                class="svg-colour-unreviewed evidence-tag"
                data-testid="evidence-tag-trigger"
                type="button"
              >
                <test-file-stub
                  height="12"
                  width="12"
                />
                <span
                  class="evidence-tag__label"
                >
                  1 automatic annotation
                </span>
              </button>
              <div
                class="evidence-tag-content "
                data-testid="evidence-tag-content"
                id="1"
              />
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Description
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          some description
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            See also
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          <a
            class="external-link"
            href="https://www.omim.org/entry/3124"
            rel="noopener"
            target="_blank"
          >
            3124
            <test-file-stub
              data-testid="external-link-icon"
              width="12.5"
            />
          </a>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_disruption_phenotype": cc_disruption_phenotype 1`] = `
<DocumentFragment>
  <h3
    class="tiny"
  >
    Isoform 4
  </h3>
  <div
    class="text-block"
  >
    value
  </div>
  <h3
    class="tiny"
  >
    Isoform 4 dfs
  </h3>
  <div
    class="text-block"
  >
    value
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_domain": cc_domain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_function": cc_function 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_induction": cc_induction 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_interaction": cc_interaction 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <div
        class="no-wrap"
      >
        <a
          href="/uniprotkb/P12345"
        >
          P12345
        </a>
         (gen)
      </div>
    </li>
    <li>
      <div
        class="no-wrap"
      >
        <a
          href="/uniprotkb/P12345-1"
        >
          P12345-1
        </a>
         (gene1)
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_mass_spectrometry": cc_mass_spectrometry 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      isoform 1
    </h3>
    Molecular mass is 2.1 Da. Determined by LSI. note value
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_miscellaneous": cc_miscellaneous 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_pathway": cc_pathway 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_pharmaceutical": cc_pharmaceutical 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_polymorphism": cc_polymorphism 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_ptm": cc_ptm 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_rna_editing": cc_rna_editing 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at position 
      <span>
        1 
        <button
          aria-controls="0"
          aria-expanded="false"
          class="svg-colour-unreviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="0"
        />
      </span>
    </div>
    <div>
      <span>
        value 
        <button
          aria-controls="1"
          aria-expanded="false"
          class="svg-colour-unreviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="1"
        />
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_sequence_caution": cc_sequence_caution 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
     differs from that shown. Reason: Erroneous gene model prediction Text note
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_similarity": cc_similarity 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_subcellular_location": cc_subcellular_location 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div
      id="id1term"
    >
      <strong>
        location value
      </strong>
       
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
      ; topology value 
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
    </div>
    <div
      class="text-block"
    >
      value
      <button
        aria-controls="2"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="2"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_subunit": cc_subunit 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_tissue_specificity": cc_tissue_specificity 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_toxic_dose": cc_toxic_dose 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "date_created": date_created 1`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_modified": date_modified 1`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_sequence_modified": date_sequence_modified 1`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ec": ec 1`] = `
<DocumentFragment>
  1.2.3.4
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "error_gmodel_pred": error_gmodel_pred 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
     differs from that shown. Reason: Erroneous gene model prediction Text note
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "family": family 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "feature_count": feature_count 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Chain (1)
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "fragment": fragment 1`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_act_site": ft_act_site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_binding": ft_binding 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_ca_bind": ft_ca_bind 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_carbohyd": ft_carbohyd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_chain": ft_chain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_coiled": ft_coiled 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_compbias": ft_compbias 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_conflict": ft_conflict 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_crosslnk": ft_crosslnk 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_disulfide": ft_disulfide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_dna_bind": ft_dna_bind 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_domain": ft_domain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_helix": ft_helix 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_init_met": ft_init_met 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_intramem": ft_intramem 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_lipid": ft_lipid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_metal": ft_metal 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_mod_res": ft_mod_res 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_motif": ft_motif 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_mutagen": ft_mutagen 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_con": ft_non_con 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_std": ft_non_std 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_ter": ft_non_ter 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_np_bind": ft_np_bind 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_peptide": ft_peptide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_propep": ft_propep 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_region": ft_region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_repeat": ft_repeat 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_signal": ft_signal 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_site": ft_site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_strand": ft_strand 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_top_dom": ft_top_dom 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_transit": ft_transit 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_transmem": ft_transmem 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_turn": ft_turn 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_unsure": ft_unsure 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_var_seq": ft_var_seq 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_variant": ft_variant 1`] = `
<DocumentFragment>
  <div
    class="loader-container"
  >
    <test-file-stub
      classname="loader"
      height="100"
      width="100"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ft_zn_fing": ft_zn_fing 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "gene_names": gene_names 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    some Gene
  </span>
  <button
    aria-expanded="false"
    class="button tertiary ellipsis-reveal"
    title="Show more"
    type="button"
  >
    [...]
  </button>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_names": gene_names-expanded 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    some Gene
  </span>
  , some Syn, some locus, some orf
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_oln": gene_oln 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some locus
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_orf": gene_orf 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some orf
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_primary": gene_primary 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some Gene
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_synonym": gene_synonym 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some Syn
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go": go 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go_c": go_c 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_f": go_f 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_id": go_id 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go_p": go_p 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span>
    uniprot_id
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "keyword": keyword 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-11111"
      >
         #keyword value
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "keywordid": keywordid 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-11111"
      >
         #KW-11111
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "kinetics": kinetics 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <button
          aria-controls="0"
          aria-expanded="false"
          class="svg-colour-reviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="0"
        />
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <div
      class="text-block"
    >
      value1
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-reviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lit_pubmed_id": lit_pubmed_id 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/12347"
      >
        12347
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12349"
      >
        12349
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        2 more IDs
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lit_pubmed_id": lit_pubmed_id-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/12347"
      >
        12347
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12349"
      >
        12349
      </a>
    </li>
    <li>
      <a
        href="/citations/12340"
      >
        12340
      </a>
    </li>
    <li>
      <a
        href="/citations/12341"
      >
        12341
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less IDs
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "mapped_pubmed_id": mapped_pubmed_id 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "mass": mass 1`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
    title="scientific name (common name) (synonyms 1), taxon ID 9606"
  >
    9606
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organism_name": organism_name 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
    title="scientific name (common name) (synonyms 1), taxon ID 9606"
  >
    scientific name (common name) (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ph_dependence": ph_dependence 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    value1
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_existence": protein_existence 1`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_name": protein_name 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    rec full Name
  </span>
  <button
    aria-expanded="false"
    class="button tertiary ellipsis-reveal"
    title="Show more"
    type="button"
  >
    [...]
  </button>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_name": protein_name-expanded 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    rec full Name
  </span>
  , recommended short name, 1.2.3.4, a full alt Name, short alt name1, 1.2.3.3, allergen, biotech, cd antigen, inn antigen, sub full Name, 1.2.3.5, includesrec full Name, includesrecommended short name, includesa full alt Name, includesshort alt name1
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "redox_potential": redox_potential 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    value1
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "reviewed": reviewed 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--reviewed"
    title="This marks a reviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <section
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <div
        class="sequence__sequence"
      >
        <span
          class="sequence__sequence__chunk"
        >
          <svg
            height="30"
            width="100"
          >
            <text
              class="sequence__sequence__chunk__counter"
              x="100"
              y="10"
            >
              10
            </text>
            <text
              class="sequence__sequence__chunk__sequence"
              x="0"
              y="20"
            >
              SAPSQDFMRF
            </text>
          </svg>
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "sequence_version": sequence_version 1`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "structure_3d": structure_3d 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "temp_dependence": temp_dependence 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    value1
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "uniparc_id": uniparc_id 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "version": version 1`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "virus_hosts": virus_hosts 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/9606"
        title="scientific name (common name) (synonyms 1), taxon ID 9606"
      >
        scientific name (common name) (synonyms 1)
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "xref_proteomes": xref_proteomes 1`] = `<DocumentFragment />`;
